--- a/core/install/resources/views/configuration.htm
+++ b/core/install/resources/views/configuration.htm
@@ -39,7 +39,7 @@
 			</tr>
 			<tr>
 				<td class='vncellreq' valign='top' align='left' nowrap='nowrap'>
-					{$domain_name}
+					{$label_domain_name}
 				</td>
 				<td class='vtable' align='left'>
 					<input class='formfld' type='text' name='domain_name' maxlength='255' value="{$domain_name}"><br />
