--- a/core/install/resources/views/template.htm
+++ b/core/install/resources/views/template.htm
@@ -6,7 +6,9 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<link rel="stylesheet" type="text/css" href="/themes/default/css.php">
+		<link rel="stylesheet" type="text/css" href="/fusionpbx/themes/default/css.php">
 		<link rel='icon' href='/themes/default/favicon.ico'>
+		<link rel='icon' href='/fusionpbx/themes/default/favicon.ico'>
 		<title>FusionPBX</title>
 	</head>
 	<body onload="">
